tests/machine/x/fs/string_compare.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/string_compare.fs(3,15): error FS0001: This expression was expected to have type
    string    
but here has type
    bool    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(4,15): error FS0001: This expression was expected to have type
    string    
but here has type
    bool    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(5,15): error FS0001: This expression was expected to have type
    string    
but here has type
    bool    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(6,15): error FS0001: This expression was expected to have type
    string    
but here has type
    bool    
