tests/machine/x/fs/string_compare.fs
open System

printfn "%A" ("a" < "b")
printfn "%A" ("a" <= "a")
printfn "%A" ("b" > "a")
printfn "%A" ("b" >= "b")
